Thu May 27 20:27:37 1999  Carlo Wood (carlo@gnu.org)

	* Makefile.am, configure.in: Added automake support.

Mon Jul 13 12:01:51 1992  Brian Fox  (bfox@cubit)

	* tilde.c: (tilde_expand_word) If there is no variable $HOME, then
	look up the user's home directory in the password database.
