@@ -2,3 +2,4 @@ AUTOMAKE_OPTIONS = 1.3 foreign
 noinst_LIBRARIES = libtilde.a
 libtilde_a_SOURCES = tilde.c shell.c tilde.h ansi_stdlib.h
 
+MAINTAINERCLEANFILES=Makefile.in aclocal.m4 configure
