@@ -1,3 +1,10 @@
+Sat Jun 12 18:28:40 1999  Carlo Wood (carlo@gnu.org)
+
+	* acinclude.m4, acconfig.h: Added acinclude.m4 and acconfig.h
+	* configure.in: Added AC_MINIX, AC_CHECK_HEADERS and
+	  BASH_CHECK_GETPW_FUNCS (copied from bash-2.03).
+
+
 Thu May 27 20:27:37 1999  Carlo Wood (carlo@gnu.org)
 
 	* Makefile.am, configure.in: Added automake support.
